Add posting functionality

--- a/nginx.conf
+++ b/nginx.conf
@@ -21,8 +21,15 @@ http {
 
             proxy_ssl_verify off;
 
-            proxy_pass http://pythonpost/;
-            proxy_redirect off;
+            proxy_pass      http://pythonpost;
+            proxy_redirect  default;
+            proxy_read_timeout 60s;
+
+            # May not need or want to set Host. Should default to the above hostname.
+            proxy_set_header          Host            $host;
+            proxy_set_header          X-Real-IP       $remote_addr;
+            proxy_set_header          X-Forwarded-For $proxy_add_x_forwarded_for;
+
           }
 
           location / {
