Add a docker-compose file and move webserver content into webroot folder

--- a/nginx.conf
+++ b/nginx.conf
@@ -21,7 +21,7 @@ http {
 
             proxy_ssl_verify off;
 
-            proxy_pass      http://pythonpost;
+            proxy_pass      http://python;
             proxy_redirect  default;
             proxy_read_timeout 60s;
 
