Update paths to follow new openapi spec

--- a/nginx.conf
+++ b/nginx.conf
@@ -15,7 +15,7 @@ http {
 
           server_name _;
 
-          location /post/ {
+          location /api/ {
             add_header Cache-Control "no-cache";
             expires    0;
 
