--- a/nginx.conf
+++ b/nginx.conf
@@ -2,20 +2,20 @@
 # /etc/nginx/sites-available/default
 
 events {
-  worker_connections  1024;
+    worker_connections  1024;
 }
 
 http {
-  server {
-          listen 8080 default_server;
-          listen [::]:8080 default_server;
+    server {
+        listen 8080 default_server;
+        listen [::]:8080 default_server;
 
-          root /var/www/html;
-          index index.html index.htm index.nginx-debian.html;
+        root /var/www/html;
+        index index.html index.htm index.nginx-debian.html;
 
-          server_name _;
+        server_name _;
 
-          location /api/ {
+        location /api/ {
             add_header Cache-Control "no-cache";
             expires    0;
 
@@ -30,10 +30,14 @@ http {
             proxy_set_header          X-Real-IP       $remote_addr;
             proxy_set_header          X-Forwarded-For $proxy_add_x_forwarded_for;
 
-          }
+        }
 
-          location / {
-                  try_files $uri $uri/ =404;
-          }
-  }
+        location / {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Content-Type,api_key,Authorization';
+            add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
+            try_files $uri $uri/ =404;
+        }
+    }
 }
