--- a/nginx.conf
+++ b/nginx.conf
@@ -37,6 +37,7 @@ http {
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Content-Type,api_key,Authorization';
             add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
+            include  /etc/nginx/mime.types;
             try_files $uri $uri/ =404;
         }
     }
