Update api request pathing
Have nginx handle both paths for different hosting schemes

--- a/nginx.conf
+++ b/nginx.conf
@@ -15,6 +15,10 @@ http {
 
         server_name _;
 
+        location /sensehat {
+            rewrite ^/sensehat(.*)$ $1 last;
+        }
+
         location /api/ {
             add_header Cache-Control "no-cache";
             expires    0;
