--- a/nginx.conf
+++ b/nginx.conf
@@ -15,11 +15,7 @@ http {
 
         server_name _;
 
-        location /sensehat {
-            rewrite ^/sensehat(.*)$ $1 last;
-        }
-
-        location /api/ {
+        location ~ (/sensehat)?/api/ {
             add_header Cache-Control "no-cache";
             expires    0;
 
@@ -36,7 +32,7 @@ http {
 
         }
 
-        location / {
+        location ~ (/sensehat)?/ {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Content-Type,api_key,Authorization';
