Fix naiive routing issue

--- a/nginx.conf
+++ b/nginx.conf
@@ -15,13 +15,17 @@ http {
 
         server_name _;
 
-        location ~ (/sensehat)?/api/ {
+	location /sensehat {
+		rewrite ^/sensehat(.*) $1 last;
+	}
+
+        location /api/ {
             add_header Cache-Control "no-cache";
             expires    0;
 
             proxy_ssl_verify off;
 
-            proxy_pass      http://python;
+            proxy_pass      http://python/api/;
             proxy_redirect  default;
             proxy_read_timeout 60s;
 
@@ -32,7 +36,7 @@ http {
 
         }
 
-        location ~ (/sensehat)?/ {
+        location / {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Content-Type,api_key,Authorization';
